src/app.scss
@import '@picocss/pico/scss/pico'; /* To import only what you need from Pico [check the documentaion](https://picocss.com/docs/customization.html) */
/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */

.muted {
	color: var(--secondary);
}

details,
summary {
	border-radius: var(--border-radius);
}

details {
	padding-bottom: 0;

	&[open] {
		background-color: var(--card-background-color);

		> summary {
			margin: 0;
			padding: calc(var(--spacing));

			&:focus:not([role='button']) {
				color: var(--accordion-open-summary-color);
			}
		}
	}

	table:last-child {
		margin: 0;
	}

	> summary {
		background-color: var(--card-sectionning-background-color);
		padding: calc(var(--spacing));

		&:focus:not([role='button']) {
			color: var(--accordion-close-summary-color);
		}

		> .title {
			display: flex;
			gap: calc(var(--spacing));
		}
	}
}

.danger-zone {
	div.entry {
		display: flex;
		flex-direction: row;
		padding: calc(var(--spacing));

		> div:first {
			flex-grow: 1;
			display: flex;
			flex-direction: column;
		}
	}

	button {
		background-color: var(--del-color);
		border-color: var(--form-element-invalid-border-color);
		margin-bottom: 0;
	}
}

body div.vest-row {
	display: flex;
	flex-direction: row;
	gap: 15px;
	padding-bottom: calc(var(--spacing));
	white-space: nowrap;

	* {
		margin: auto;
	}

	input {
		margin-bottom: 0;
	}

	> div:last-child {
		flex-grow: 1;
	}

	> *:first-child {
		width: 33%;
	}
}

.vesting-period {
	display: flex;

	input {
		flex-shrink: 5;
	}

	select {
		flex-shrink: 3;
	}
}

.overview {
	padding-top: calc(var(--spacing));
	padding-bottom: calc(var(--spacing));
	margin-bottom: calc(var(--spacing));

	> header {
		padding: calc(var(--spacing));
		margin-bottom: calc(var(--spacing));
	}

	table {
		margin-bottom: 0;
	}
}

.icon::after {
	background-color: currentColor;
	content: '';
	padding: 0 0.5em;
	margin: 0 0.125rem;
	-webkit-mask-repeat: no-repeat;
	mask-repeat: no-repeat;
	-webkit-mask-position: center;
	mask-position: center;
	clip-path: padding-box;
}

.icon.settings::after {
	-webkit-mask-image: url('$lib/assets/gear.svg');
	mask-image: url('$lib/assets/gear.svg');
}

a[target='_blank'] {
	font-weight: bold;
	&::after {
		@extend .icon;
		-webkit-mask-image: url('$lib/assets/arrow-up-right-from-square.svg');
		mask-image: url('$lib/assets/arrow-up-right-from-square.svg');
	}
}

